[gd_scene load_steps=22 format=3 uid="uid://b88jquse81weg"]

[ext_resource type="Texture2D" uid="uid://ewdlvwkjh8xm" path="res://Background_3.png" id="1_8twn5"]
[ext_resource type="Texture2D" uid="uid://byb60d0b67dv0" path="res://Conveyor belt.png" id="2_0jact"]
[ext_resource type="Texture2D" uid="uid://bf2ytgvqij3n8" path="res://IndicatorPuzzle.png" id="2_oqqx0"]
[ext_resource type="PackedScene" path="res://temp moving/booble.tscn" id="2_tv8t3"]
[ext_resource type="Script" path="res://scripts/booble.gd" id="3_7hwpx"]
[ext_resource type="Texture2D" uid="uid://qp3hk0qmarps" path="res://Cloud bubbles.png" id="3_ba1ev"]
[ext_resource type="PackedScene" uid="uid://6stpvaosdagt" path="res://temp moving/claw.tscn" id="3_kcetu"]
[ext_resource type="PackedScene" uid="uid://bq1vekksxp1ut" path="res://button_move.tscn" id="4_ogoqk"]
[ext_resource type="Texture2D" uid="uid://jd3sx6jqlroe" path="res://BowlPrototype4Pink.png" id="5_bbkne"]
[ext_resource type="PackedScene" uid="uid://duwnw7dgob6dn" path="res://button_move_right.tscn" id="5_fsm3w"]
[ext_resource type="Texture2D" uid="uid://y3m54igoitdl" path="res://Bumps.png" id="6_1hxgf"]
[ext_resource type="Texture2D" uid="uid://cuyneceel5m45" path="res://BowlPrototype4Blue.png" id="7_xvx0n"]
[ext_resource type="Texture2D" uid="uid://dnefy0b237jw8" path="res://BowlPrototype4Green.png" id="8_oej45"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dvsgr"]
size = Vector2(286, 30)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_v7fxd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pissq"]
atlas = ExtResource("3_ba1ev")
region = Rect2(34, 0, 16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gdbac"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0gb4c"]
atlas = ExtResource("3_ba1ev")
region = Rect2(16, 0, 16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_65yr7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lhtdx"]
atlas = ExtResource("3_ba1ev")
region = Rect2(0, 0, 16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3xqk3"]
size = Vector2(20, 18.9851)

[node name="Node2D2" type="Node2D"]

[node name="Background3" type="Sprite2D" parent="."]
position = Vector2(9.53674e-07, 61)
scale = Vector2(1.1, 1.1)
texture = ExtResource("1_8twn5")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)

[node name="Rail Prototype" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rail Prototype"]
position = Vector2(0, -76)
shape = SubResource("RectangleShape2D_dvsgr")

[node name="Sprite2D" type="Sprite2D" parent="Rail Prototype"]
position = Vector2(-94, -57)
texture = ExtResource("2_0jact")

[node name="Sprite2D2" type="Sprite2D" parent="Rail Prototype"]
position = Vector2(0, -57)
texture = ExtResource("2_0jact")

[node name="Sprite2D3" type="Sprite2D" parent="Rail Prototype"]
position = Vector2(93, -57)
texture = ExtResource("2_0jact")

[node name="Comand Prototype" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Comand Prototype"]
position = Vector2(0, 72)
shape = SubResource("RectangleShape2D_dvsgr")

[node name="Sprite2D" type="Sprite2D" parent="Comand Prototype"]
position = Vector2(-143, 57)
scale = Vector2(286, 31)
texture = SubResource("PlaceholderTexture2D_v7fxd")

[node name="UICommandPanelBase" type="Polygon2D" parent="."]
polygon = PackedVector2Array(-141, 57, -141, 81, 141, 81, 141, 57)

[node name="UICommandExtra1" type="Polygon2D" parent="."]
polygon = PackedVector2Array(-140, 57, -140, 28, -84, 28, -84, 58)

[node name="UICommandExtra2" type="Polygon2D" parent="."]
position = Vector2(225, 0)
polygon = PackedVector2Array(-140, 57, -140, 28, -84, 28, -84, 58)

[node name="UICorner1" type="Polygon2D" parent="."]
polygon = PackedVector2Array(-84, 57, -84, 28, -56, 57)

[node name="UICorner2" type="Polygon2D" parent="."]
polygon = PackedVector2Array(85, 57, 85, 28, 56, 57)

[node name="UIButtonSurface1" type="Polygon2D" parent="."]
scale = Vector2(1.04762, 1)
color = Color(0.61339, 0.61339, 0.61339, 1)
polygon = PackedVector2Array(0, 79, 0, 57, -21, 57, -21, 79)

[node name="UIButtonSurface2" type="Polygon2D" parent="."]
position = Vector2(22, 0)
scale = Vector2(1.04762, 1)
color = Color(0.61339, 0.61339, 0.61339, 1)
polygon = PackedVector2Array(0, 79, 0, 57, -21, 57, -21, 79)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(-106, 57)
texture = ExtResource("2_oqqx0")

[node name="Frame" type="StaticBody2D" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="Frame"]
position = Vector2(141.5, 170.373)
scale = Vector2(1.5, 41.3116)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-1, -6, -1, -6.06061, 1, -6, 1, -6, 1, -5.47746, 1, -2, 0.0245237, -2, -1, -2, -1, -5.8165)

[node name="Frame2" type="StaticBody2D" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="Frame2"]
position = Vector2(-142, 169)
scale = Vector2(1.5, 41.3116)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-1, -6, -1, -6.06061, 1, -6, 1, -6, 1, -5.47746, 0.999992, -4.00284, 0.66671, -3.65515, 0.999992, -3.36471, 1, -2, 0.0245237, -2, -1, -2, -1, -3.58481, -1, -4.03817, -1, -4.45803, -1, -5.8165)

[node name="Frame3" type="StaticBody2D" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="Frame3"]
position = Vector2(1.5, 11)
scale = Vector2(1.00352, 1)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-142, 68, -142, 68, -142, 72, -142, 76, 142, 76, 142, 68)

[node name="Frame4" type="StaticBody2D" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="Frame4"]
position = Vector2(0, -153)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-142, 68, -142, 68, -142, 71.6101, -142, 76, 142, 76, 142, 68, -67.25, 68)

[node name="CornerFrame1" type="Polygon2D" parent="."]
position = Vector2(-94, 1)
scale = Vector2(1.66667, 1)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(138, -78, 139.8, -76, 141, -74, 141, -78, 139.8, -78)

[node name="CornerFrame2" type="Polygon2D" parent="."]
position = Vector2(2, 0)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-142, -78, -142, -74, -137, -77)

[node name="CornerFrame3" type="Polygon2D" parent="."]
position = Vector2(1, -1)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-141, 80, -141, 75, -136, 79)

[node name="CornerFrame4" type="Polygon2D" parent="."]
position = Vector2(-142, -33)
scale = Vector2(2, 1.4)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(138, 80, 141, 75, 141, 80)

[node name="booble" parent="." instance=ExtResource("2_tv8t3")]
position = Vector2(118, 4)
ID = 1

[node name="Sprite2D" parent="booble" index="1"]
rotation = -0.785398
texture = SubResource("AtlasTexture_pissq")

[node name="booble_2" type="Area2D" parent="."]
position = Vector2(81, 3.00001)
rotation = 0.785398
scale = Vector2(0.15, 0.147)
script = ExtResource("3_7hwpx")
ID = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="booble_2"]
scale = Vector2(11.3709, 10.8129)
shape = SubResource("RectangleShape2D_gdbac")

[node name="Sprite2D" type="Sprite2D" parent="booble_2"]
position = Vector2(4.71402, -4.81027)
rotation = -0.785398
scale = Vector2(10, 10)
texture = SubResource("AtlasTexture_0gb4c")

[node name="booble_3" type="Area2D" parent="."]
position = Vector2(49, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="booble_3"]
scale = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_65yr7")

[node name="Sprite2D" type="Sprite2D" parent="booble_3"]
scale = Vector2(1.5, 1.5)
texture = SubResource("AtlasTexture_lhtdx")

[node name="BowlPrototype4" type="Sprite2D" parent="."]
position = Vector2(-44, 10)
texture = ExtResource("5_bbkne")

[node name="Bumps" type="Sprite2D" parent="."]
position = Vector2(-71, 10)
texture = ExtResource("6_1hxgf")

[node name="BowlPrototype5" type="Sprite2D" parent="."]
position = Vector2(-98, 10)
texture = ExtResource("7_xvx0n")

[node name="Bumps2" type="Sprite2D" parent="."]
position = Vector2(-17, 10)
texture = ExtResource("6_1hxgf")

[node name="BowlPrototype6" type="Sprite2D" parent="."]
position = Vector2(10, 10)
texture = ExtResource("8_oej45")

[node name="claw" parent="." instance=ExtResource("3_kcetu")]
position = Vector2(1.07288e-06, -47)

[node name="CollisionShape2D" parent="claw/socket/socket_area" index="0"]
position = Vector2(-49.4975, -42.4264)

[node name="ButtonMoveLeft" parent="." instance=ExtResource("4_ogoqk")]
position = Vector2(-11, 66)

[node name="ButtonMoveRight" parent="." instance=ExtResource("5_fsm3w")]
position = Vector2(11, 66)

[node name="Node" type="Node" parent="."]

[node name="pocket_1" type="Area2D" parent="Node"]
position = Vector2(-98, 16)
scale = Vector2(1.54209, 3.2205)
script = ExtResource("3_7hwpx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node/pocket_1"]
shape = SubResource("RectangleShape2D_3xqk3")

[node name="pocket_2" type="Area2D" parent="Node"]
position = Vector2(-43, -24)
scale = Vector2(1.39532, 5.85724)
script = ExtResource("3_7hwpx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node/pocket_2"]
position = Vector2(0, 7.89878)
scale = Vector2(1, 0.693999)
shape = SubResource("RectangleShape2D_3xqk3")

[node name="pocket_3" type="Area2D" parent="Node"]
position = Vector2(10, 7)
scale = Vector2(1.70521, 3.92)
script = ExtResource("3_7hwpx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node/pocket_3"]
position = Vector2(0, 2.71739)
shape = SubResource("RectangleShape2D_3xqk3")

[connection signal="area_entered" from="claw/socket/socket_area" to="booble" method="_on_socket_area_area_entered"]

[editable path="booble"]
[editable path="claw"]
